--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,5 @@ jobs:
           chmod 600 private_key.pem
           mkdir -p ~/.ssh
           ssh-keyscan $SERVER_IP >> ~/.ssh/known_hosts
-          ssh -i private_key.pem $SERVER_LOGIN@$SERVER_IP "sudo docker stop tgbot || echo && sudo docker rm tgbot || echo && sudo docker login ghcr.io -u ilyasvinarenko -p ${{ secrets.DEPLOY_TOKEN }} && sudo docker run -d --network=tgbotnet --name tgbot -e LOG_LEVEL=${{ secrets.LOG_LEVEL }} -e Son_of_Ilya_bot_id=${{ secrets.SON_OF_ILYA_BOT_ID }} -e Son_of_Ilya_bot=${{ secrets.SON_OF_ILYA_BOT }} ghcr.io/ilyasvinarenko/tgbot:${{ github.sha }}"
+          ssh -i private_key.pem $SERVER_LOGIN@$SERVER_IP "sudo docker stop tgbot || echo && sudo docker rm tgbot || echo && sudo docker login ghcr.io -u ilyasvinarenko -p ${{ secrets.DEPLOY_TOKEN }} && sudo docker run -d --network=tgbotnet --name tgbot -e Son_of_Ilya_bot_id=${{ secrets.SON_OF_ILYA_BOT_ID }} -e Son_of_Ilya_bot=${{ secrets.SON_OF_ILYA_BOT }} ghcr.io/ilyasvinarenko/tgbot:${{ github.sha }}"
           rm -f private_key.pem
